<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pond Mother</string>
    <string name="versions">Version P.M.3.3</string>
    <string name="action_settings">Settings</string>
    <string name="noresponse">No Response From Server Please Try Again</string>
    <string name="emaidnumber">Email Id / Mobile Number</string>
    <string name="pwd">Password</string>
    <string name="refresh">Refresh</string>
    <string name="login">Log In</string> 
    <string name="logout">Log Out</string>
    <string name="signup">Sign Up</string>
    <string name="feederschedules">Feeder Schedules</string> 
    <string name="signup1">SIGN UP</string>
    <string name="updateschedules">Update Schedules</string>
    <string name="internet">No Internet Connection</string>
    <string name="userid">Please Enter User Id</string> 
    <string name="passwd">Please Enter  Password</string>
    <string name="unablegetdata">Null Response From Server  Please Try Again</string>
    <string name="fromtime">From Time Should not be Null</string>
    <string name="totime">To Time  Should not be Null</string>
    <string name="nullvalues">Null or Empty Values Should not be Allowed</string>
    <string name="emailphnum">Email or Mobile Number</string>
    <string name="feeederlog">Feeder Log</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="sendtask">send  task - start</string>
    <string name="feederid">Feeder Id</string>
    <string name="feedername">Feeder Name</string>
    <string name="no_of_schedules">Number Of Schedules</string>
    <string name="areulogout">Are Sure Want to Log Out?</string>
    <string name="dispensedfeed">Total Feed Should  be Greater  Than Dispensed Feed</string>
    <string name="procedialog">Loading. please wait...</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="resetpassword">Reset your password</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="confirmupdate">Confirm Update</string>
    <string name="doupdateschedules">Do You Want to Update Schedules</string>
    <string name="enterdata">Please Enter Data In All Fields</string>
    <string name="keynull">key should not be null</string>
    <string name="device_id">Device Id</string>
    <string name="main_Datetext">Date : </string>
    <string name="main_Deviceidtext">Device Id :</string>
    <string name="main_updatebutton">Update</string>
    <string name="phno">Mobile Number</string> 
    <string name="cpwd">Create Password</string>
    <string name="rpwd">Re Enter Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="lbl_name">First Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_lname">Last Name</string>
    <string name="oldpwd">Old Password</string>
    <string name="lbl_crpwd">Create Password</string>
    <string name="lbl_repwd">Re Enter Password</string>
    <string name="npwd">New Password</string>
    <string name="otp">OTP Verification</string>
    <string name="em">Email Id</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="feed">Feed</string>
    <string name="onoff">On &amp; Off</string>
    <string name="feedoff">Feed Off</string>
    <string name="aboutus">About Us</string>
    <string name="schedules">Schedules</string>
    <string name="dfeed">D.Feed</string>
    <string name="mfeed">M.Feed</string>
    <string name="afeed">A.Feed</string>
    <string name="add">Add/Edit</string>
    <string name="pastdate">Past Date Should not be Allowed</string>
    <string name="currentdate">Today Date Should not be Allowed in From Date</string>
    <string name="greaterthan">To Date Must be Greater than From Date</string>
    <string name="daterange">Only  7 Days are  Allowed in Date Range </string>
    <string name="ocf">One Cycle Feed</string>
    <string name="version">PondMother Vesrion 1.0</string>
    <string name="header">A.F = Actual Feed , D.F = Dispensed Feed </string>
    <string name="schedluetime">Schedule Time Should not be Null At Schedule</string>
    <string name="feedempty">Feed Should not be Empty  At   Schedule</string>
    <string name="aliasname">Alias Name</string>
    <string name="feedname">Feed Name</string>
    <string name="update">Update</string>
    <string name="feedgap">Feeding Gap(sec)</string>
    <string name="totim">To Date</string>
    <string name="ftime">From Date</string>
    <string name="load">Load</string>
    <string name="feedgp">Feeding Gap</string>
    <string name="sec">Sec</string>
    <string name="feeddis">Feed Dispense</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="rpass">Enter New Password</string>
    <string name="reepass">Re-enter New Password</string>
    <string name="upadtepassword">Update Password</string>
</resources>
