<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
 <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:orientation="vertical">
                
                <EditText
                    android:id="@+id/createedittextres"
                    android:layout_width="300dp"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/rpass"
                    android:textColor="@android:color/black"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="18sp" />
 
                <EditText
                    android:id="@+id/reenteredittextres"
                    android:layout_width="300dp"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/black"
                    android:inputType="textPassword"
                    android:hint="@string/reepass"
                    android:singleLine="true"
                    android:textSize="18sp" />
 
                <Button
                    android:id="@+id/reset"
                    android:layout_width="120dp"
                    android:layout_height="39dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_green"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>
</LinearLayout>
